fix banner on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,23 @@
+#home-banner-img-responsive {
+  width: 100%;
+  height: 100vh;
+}
+
+#home-banner-text-responsive {
+  position: absolute;
+  width: 100%;
+  color: white;
+  top: 40vh;
+  left: 0;
+}
+
 .home-banner {
   width: 100%;
   height: 100%;
 }
 
 .font-size-90 {
-  font-size: calc(70px + (90 - 70) * ((100vw - 576px) / (1140 - 576)));
+  font-size: calc(50px + (90 - 50) * ((100vw - 576px) / (1140 - 576)));
 }
 
 .home-box {
@@ -78,19 +91,6 @@
   font-weight: 400 !important;
 }
 
-#home-banner-img-responsive {
-  width: 100%;
-  height: 100vh;
-}
-
-#home-banner-text-responsive {
-  position: absolute;
-  width: 100%;
-  color: white;
-  top: 40vh;
-  left: 0;
-}
-
 @media screen and (max-width: 576px) {
   #explore-heading {
     text-align: center;
@@ -99,11 +99,15 @@
 
 @media screen and (max-width: 768px) {
   #home-banner-img-responsive {
-    height: 25vh !important;
+    height: 45vh !important;
   }
 
   #home-banner-text-responsive {
-    top: 5vh !important;
+    top: 10vh !important;
+  }
+
+  .home-box {
+    padding: 2rem 4rem !important;
   }
 }
 
